Extras template now fully supports still menus with no audio • pre- and post-commands work for features, pre-commands work for menus • maintain jumpcount to detect when scripts jump elsewhere • architecture for playback-triggered commands and button sets is in place (untested) • execute preceding triggers before activating buttons for compatibility still • features with overlays are detected and routed to (not existing) HTML5 player • error handling when playing feature fails • menus will try loading video backdrop first and only fall back to still on error • still and highlight loading properly sequenced to prevent flashing inconsistent states • emulator better reflects iTunes’ behavior, ignore keypresses when iTunes is playing • scale alert text size with view size • mouse hotspot updates and highlight prefetching refactored to dedicated methods
git-svn-id: https://svn.code.sf.net/p/dvd2ite/code/trunk@24 0fc63e2a-737a-4626-a4d0-5a3d12a8b6d1

--- a/Extras Template/style.css
+++ b/Extras Template/style.css
@@ -28,7 +28,7 @@ body {
 	text-shadow: 0px 2px 0px #000;
 	background-color:rgba(32, 32, 32, 0.6);
 	font-family: Helvetica, Arial, sans-serif;
-	font-size:30px;
+	font-size:36px;
 	text-align:center;
 	position:fixed;
 	top:0;
